# GTAScript

./: CMakeLists.txt  run.bat  run.sh
src/: main.cpp
