cmake_minimum_required(VERSION 3.10)
project(PENISYUIPIZDA228AGAAGA VERSION 1.0 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED True)

file(GLOB_RECURSE SOURCES "src/**/*.cpp")
file(GLOB_RECURSE HEADER_DIRS LIST_DIRECTORIES true "src/**/*.h")

set(MAIN_SOURCE "src/Main.cpp")


add_executable(PENISYUIPIZDA228AGAAGA ${SOURCES})




